:sparkles: OSIV = false
영속성 컨텍스트를 view 까지 유지할 것인지에 대한 값이 기본으로 true로 설정되어 있다. 트래픽이 적은 ADMIN 관련 API 말고는 OSIV를 끄는 것이 좋다.