@@ -2,15 +2,13 @@ package com.example.inflearnjpapart2.dto;
 
 import com.example.inflearnjpapart2.domain.Address;
 import com.example.inflearnjpapart2.domain.Order;
-import com.example.inflearnjpapart2.domain.OrderItem;
+
 import com.example.inflearnjpapart2.domain.OrderStatus;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
-import lombok.Getter;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Data
 @EqualsAndHashCode(of = "orderId") // orderId를 기준으로 groupingBy하기 위함. (중복 제거)
@@ -29,7 +27,7 @@ public class OrderDto {
         address = order.getDelivery().getAddress();
         orderItems = order.getOrderItems().stream()
                 .map(OrderItemDto::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public OrderDto(Long orderId, String name, LocalDateTime orderDate, OrderStatus orderStatus, Address address) {
